[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/menus/settings_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/menus/pause_menu.gd" type="Script" id=2]

[node name="PauseMenuLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource( 2 )

[node name="PauseMenuContainer" type="Control" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="PauseMenuContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.411765 )

[node name="PauseMenu" type="CenterContainer" parent="PauseMenuContainer"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuContainer/PauseMenu"]
offset_left = 603.0
offset_top = 323.0
offset_right = 676.0
offset_bottom = 397.0

[node name="Continue" type="Button" parent="PauseMenuContainer/PauseMenu/VBoxContainer"]
offset_right = 73.0
offset_bottom = 22.0
text = "CONTINUE"

[node name="Settings" type="Button" parent="PauseMenuContainer/PauseMenu/VBoxContainer"]
offset_top = 26.0
offset_right = 73.0
offset_bottom = 48.0
text = "SETTINGS"

[node name="Quit" type="Button" parent="PauseMenuContainer/PauseMenu/VBoxContainer"]
offset_top = 52.0
offset_right = 73.0
offset_bottom = 74.0
text = "QUIT"

[node name="SettingsMenu" parent="PauseMenuContainer" instance=ExtResource( 1 )]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="PauseMenuContainer/PauseMenu/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="PauseMenuContainer/PauseMenu/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="PauseMenuContainer/PauseMenu/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="exited_menu" from="PauseMenuContainer/SettingsMenu" to="." method="_on_SettingsMenu_exited_menu"]
